--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,3 +1,6 @@
 - sitename: GitHub
   name: Aesyt
   url: https://github.com/aesyt
+- sitename: Gitee
+  name: Aesyt
+  url: https://gitee.com/Aes_yt
